[tool.poetry]
name = "pivoter"
version = "0.1.0"
description = "Python package for declaratively pivoting human readable tables into tidy data"
authors = ["mikeAdamss <mikelovesbooks@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyright = "^1.1.254"
coverage = "^6.4.1"
isort = "^5.10.1"
dominate = "^2.6.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
behave = "^1.2.6"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
