[tool.poetry]
name = "datachef"
version = "0.1.0"
description = "Python package for transforming human readable tables into tidy data"
authors = ["mikeAdamss <mikelovesbooks@gmail.com>"]
packages = [
  {include = "datachef"},
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
behave = "^1.2.6"
black = "^22.3.0"
pdoc = "^12.0.2"
jupyterlab = "^3.4.3"
jupyter = "^1.0.0"
isort = "^5.10.1"
pylint = "^2.14.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
