[tool.poetry]
name = "datachef"
version = "0.1.0"
description = "Python package for transforming human readable tables into tidy data"
authors = ["mikeAdamss <mikelovesbooks@gmail.com>"]
packages = [
  {include = "datachef"},
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.9.0"
requests = "^2.31.0"
validators = "^0.20.0"
pytest-mock = "^3.11.1"
openpyxl = "^3.1.2"
cachecontrol = "^0.13.1"
filelock = "^3.12.2"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
pdoc = "^12.0.2"
jupyterlab = "^3.4.3"
jupyter = "^1.0.0"
isort = "^5.10.1"
pylint = "^2.14.3"
pytest-cov = "^3.0.0"
jupyter-book = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]